# ChangeLog for dev-java/commons-lang
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-lang/ChangeLog,v 1.44 2007/07/12 22:33:06 betelgeuse Exp $

  12 Jul 2007; Petteri Räty <betelgeuse@gentoo.org>
  commons-lang-2.0-r2.ebuild:
  Javadoc in sun-jdk-1.6 starting with u2 works fine so removing the work
  around from DEPEND.

  23 May 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Add ~x86-fbsd keyword. Bug #176906.

  15 Mar 2007; Markus Rothe <corsair@gentoo.org> commons-lang-2.1-r1.ebuild:
  Stable on ppc64; bug #171003

  15 Mar 2007; Joshua Nichols <nichoj@gentoo.org>
  commons-lang-2.1-r1.ebuild:
  Stable on amd64 for bug #166744.

  18 Feb 2007; nixnut <nixnut@gentoo.org> commons-lang-2.1-r1.ebuild:
  Stable on ppc wrt bug 166744

  14 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  commons-lang-2.1-r1.ebuild:
  stable x86; bug 166744

  11 Feb 2007; Vlastimil Babka <caster@gentoo.org>
  -commons-lang-2.0-r1.ebuild, -commons-lang-2.1.ebuild:
  Cleanup.

  10 Feb 2007; nixnut <nixnut@gentoo.org> commons-lang-2.0-r2.ebuild:
  Stable on ppc wrt bug 163621

  03 Feb 2007; Steve Dibb <beandog@gentoo.org> commons-lang-2.0-r2.ebuild:
  amd64 stable, bug 163621

  25 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  commons-lang-2.0-r2.ebuild:
  stable x86; bug #163621

  24 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
  commons-lang-2.0-r2.ebuild:
  Cleanup ebuild and documentation installation and add a workaround for bug
  #158720.

  11 Jan 2007; Markus Rothe <corsair@gentoo.org> commons-lang-2.0-r2.ebuild:
  Stable on ppc64

  07 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  commons-lang-2.0-r2.ebuild:
  Add ~x86-fbsd keyword.

  07 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  commons-lang-2.1-r1.ebuild:
  Add ~x86-fbsd keyword.

  05 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  commons-lang-2.0-r1.ebuild, commons-lang-2.0-r2.ebuild,