@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/commons-lang
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-lang/ChangeLog,v 1.44 2007/07/12 22:33:06 betelgeuse Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-lang/ChangeLog,v 1.45 2007/08/26 14:26:03 betelgeuse Exp $
+
+*commons-lang-2.3 (26 Aug 2007)
+
+  26 Aug 2007; Petteri Räty <betelgeuse@gentoo.org>
+  +commons-lang-2.3.ebuild:
+  Version bump.
 
   12 Jul 2007; Petteri Räty <betelgeuse@gentoo.org>
   commons-lang-2.0-r2.ebuild:
